Changes: 1. Sidebar poistion changed to fixed - in previous version, while one of the routes component was to long, sidebar was cut, while scrolling over device height. After changing to fixed the main content was overlapping to sidebar, so the main container margin-left is set as a sidebar width. 2. Sidebar css file is now shorter, because all the sizes of font, and padding are changed to clamp() css property, instead of setting it to all devices width using @media.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,15 +6,19 @@ $montserrat: 'Montserrat', sans-serif;
 $black: #212121;
 
 .flexbox {
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-content: flex-start;
     background: #eeeeee;
     .side {
         height: 100%;
+        position: fixed;
     }
     .container-fluid {
         padding-top: 15px;
+        transition: 1s;
+        min-height: 100vh;
+        height: auto;
         .toggler {
             a {
                 background: linear-gradient(171deg, rgba(0,77,64,1) 0%, rgba(0,121,107,1) 30%, rgba(0,121,107,1) 70%, rgba(0,150,136,1));
@@ -24,6 +28,7 @@ $black: #212121;
                 padding-right: 1.4em;
                 padding-left: 1.4em;
                 box-shadow: 3px 3px 10px -2px $black;
+                font-size: clamp(0.8rem, 0.9vw, 0.9rem);
             }
             span {
                 padding-left: 1em;
@@ -32,30 +37,49 @@ $black: #212121;
             }
         }
         .router {
+            margin-top: 35px;
         }
+    }
+    .container-fluid.active {
+        transition: 1s;
     }
 }
 
 @media only screen and (min-width: 1200px) {
-    .toggler a {
-        font-size: 0.9rem;
+    .container-fluid { 
+        margin-left: 17vw;
+    }
+    .container-fluid.active {
+        margin-left: 4vw;
     }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
-    .toggler a {
-        font-size: 0.9rem;
+    .container-fluid { 
+        margin-left: 18vw;
+    }
+    .container-fluid.active {
+        margin-left: 5vw;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
-    .toggler a {
-        font-size: 0.9rem;
+    .container-fluid { 
+        margin-left: 25vw;
+    }
+    .container-fluid.active {
+        margin-left: 8vw;
     }
 }
 
 @media only screen and (max-width: 768px) {
-    .toggler a {
-        font-size: 0.8rem;
+    ul {
+        margin-top: 0px;
+    }
+    .container-fluid { 
+        margin-left: 27vw;
+    }
+    .container-fluid.active {
+        margin-left: 9vw;
     }
 }
