--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,2 @@
 .container {
-    background: green;
-    width: 100%;
 }
